Overflows fixed on game related screens

--- a/app/src/app.pcss
+++ b/app/src/app.pcss
@@ -116,7 +116,7 @@
     }
 
     .main {
-        @apply h-full flex flex-col items-center overflow-y-auto px-1;
+        @apply h-full flex flex-col overflow-y-auto px-1;
     }
 
     .badge {
